# bursa-bilisim-search

./: docker-compose.yml  main.py  pyproject.toml
src/search/api/: app.py
src/search/api/routes/: search.py
src/search/services/: search.py
src/search/solr/: __init__.py  base.py  core.py  query.py
